--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a coding student...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Raleigh NC...</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love to traval...</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job would have something to do with saving animals...</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Raleigh NC...</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I would like to be versatile in my career...</p>
     </section>
 
     <footer id="footer">
