--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>Where I'm From</h1>
       <p>I am from Raleigh NC...</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>I love to traval...</p>
+      <p>I love to travel...</p>
       <h1>What's your dream job?</h1>
       <p>My dream job would have something to do with saving animals...</p>
       <h1>Where do you live?</h1>
